# dow

./: README.rst  requirements.txt  setup.cfg
dow/: __init__.py  check.py  cmd.py  create.py  dist.py  here.py  printf.py  prj.py  see.py  update.py  version.py
pyprj/: __init__.py  cmd.py  dist.py  internet.py  license.py  pip_hash.py  pipv  printf.py  prj.py  setupcfg.py  version.py
