[metadata]
maintainer = Danilo Horta
maintainer_email = horta@ebi.ac.uk
description = Python project utilities
description_file = README.rst
setup_requires = pytest-runner
url = https://github.com/limix/pyprj
license = MIT
platforms = ['any']
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    python
    project
    package
include_package_data = True
zip_safe = True

[aliases]
test=pytest

[tool:pytest]
addopts = -x --pep8 --doctest-modules
norecursedirs = doc .eggs
pep8ignore = E402 E501
